<resources>
    <string name="app_name">Kursach</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="poisk">Poisk</string>
    <string name="title_activity_poisk">Activity_poisk</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_search">activity_search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">зарегистрироваться</string>
    <string name="login">войти</string>
    <string name="zakupka">Закупки</string>
    <string name="sborka">Сборки</string>
    <string name="komplect">Комплектующие</string>
    <string name="textbuttonCreate">Создать</string>
    <string name="textbuttonUpdate">Обновить</string>
    <string name="textbuttonDelete">Удалить</string>
    <string name="text_buttonOk">ОК</string>
    <string name="textbuttonInfo">Информация о сборке</string>
    <string name="clear">Очистить бд</string>
    <string name="widget_name">My first widget</string>
    <string name="widget_text">Text in widget</string>
    <string name="app_widget_description">Count of entities</string>
    <string name="otchet">Отчет в пдф</string>

</resources>