<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="64dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/buttondelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/buttonupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/update"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="144dp" />

</LinearLayout>

    <Button
        android:id="@+id/buttonpoisk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poisk" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>