<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/editTextNameSbork"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Название" />
    <EditText
        android:id="@+id/editTextPriceSbork"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Цена" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCreateSbork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textbuttonCreate" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/textbuttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonUpdateSbork" />

        <Button
            android:text="@string/textbuttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonDeleteSbork" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textbuttonInfo"
        android:id="@+id/buttonInfoSbork" />
    <LinearLayout
        android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listSborkKom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/listSborkSbork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>