<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <EditText
      android:id="@+id/editTextPriceZak"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:hint="Цена" />
  <Spinner
      android:id="@+id/spinnerZak"
      android:layout_width="match_parent"
      android:layout_height="50dp"
    />
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonCreateZak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textbuttonCreate" />

  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        android:text="@string/textbuttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/buttonUpdateZak" />

    <Button
        android:text="@string/textbuttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/buttonDeleteZak" />
  </LinearLayout>

  <ListView
      android:id="@+id/listZak"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

</LinearLayout>